--- a/style.css
+++ b/style.css
@@ -78,13 +78,14 @@ body {
   width: 20%; 
   height: 20%;
   float: left; 
+  border: 4px solid darkkhaki;
+  border-radius: 5%;
 }
 
 .links {
   display: flex;
   justify-content: center;
   size: 300%;
-  text-decoration: none;
 }
 
 .links a {
