--- a/style.css
+++ b/style.css
@@ -57,14 +57,15 @@ body {
   padding-left: 0;
 }
 
-.project1 {
+.project1, .project2 {
+  padding-bottom: 20px;
   display: flex;
 }
 
-.project1-text {
-  padding-left: 20px;
+.project-text {
+  left: 20px;
   top: 0;
-}
+} 
 
 #SSIS {
   color: cornflowerblue;
@@ -74,12 +75,13 @@ body {
   color: rgb(17, 0, 255);
 }
 
-#SSIDpic {
+#SSIDpic, #LSSpic {
   width: 20%; 
   height: 20%;
   float: left; 
   border: 4px solid darkkhaki;
   border-radius: 5%;
+  margin-right: 20px;
 }
 
 .links {
